class_name VRRayleighProperties
extends Control


@onready var mach_number_label : Label = $VBoxContainer/RayleighMachLabel
@onready var temperature_label : Label = $VBoxContainer/RayleighTempLabel
@onready var pressure_label : Label = $VBoxContainer/RayleighPresLabel
@onready var density_label : Label = $VBoxContainer/RayleighDensLabel
@onready var stag_temp_label : Label = $VBoxContainer/RayleighStagTempLabel
@onready var stag_press_label : Label = $VBoxContainer/RayleighStagPresLabel
@onready var flow_velocity_label : Label = $VBoxContainer/RayleighFlowVelLabel
